syntax = "proto3";

package admin;
option go_package = "backend/pb/admin";

import "google/protobuf/timestamp.proto";

// Service definition
service AdminService {
  // Course Management
  rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse);
  rpc UpdateCourse(UpdateCourseRequest) returns (UpdateCourseResponse);
  rpc DeleteCourse(DeleteCourseRequest) returns (DeleteCourseResponse);
  rpc AssignFaculty(AssignFacultyRequest) returns (AssignFacultyResponse);
  
  // User Management
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc ToggleUserStatus(ToggleUserStatusRequest) returns (ToggleUserStatusResponse);
  
  // System Configuration
  rpc SetEnrollmentPeriod(SetEnrollmentPeriodRequest) returns (SetEnrollmentPeriodResponse);
  rpc ToggleEnrollment(ToggleEnrollmentRequest) returns (ToggleEnrollmentResponse);
  rpc GetSystemConfig(GetSystemConfigRequest) returns (GetSystemConfigResponse);
  rpc UpdateSystemConfig(UpdateSystemConfigRequest) returns (UpdateSystemConfigResponse);
  
  // Overrides
  rpc OverrideEnrollment(OverrideEnrollmentRequest) returns (OverrideEnrollmentResponse);
  
  // Statistics
  rpc GetSystemStats(GetSystemStatsRequest) returns (GetSystemStatsResponse);
}

// Common messages (reusing some from other services)
message Course {
  string id = 1;
  string code = 2;
  string title = 3;
  string description = 4;
  int32 units = 5;
  string schedule = 6;
  string room = 7;
  int32 capacity = 8;
  int32 enrolled = 9;
  string faculty_id = 10;
  bool is_open = 11;
  string semester = 12;
}

message User {
  string id = 1;
  string email = 2;
  string role = 3;
  string name = 4;
  string student_id = 5;
  string faculty_id = 6;
  string department = 7;
  string major = 8;
  int32 year_level = 9;
  bool is_active = 10;
  google.protobuf.Timestamp created_at = 11;
}

message SystemConfig {
  string key = 1;
  string value = 2;
  google.protobuf.Timestamp updated_at = 3;
  string updated_by = 4;
  string description = 5;
}

message SystemStats {
  int32 total_students = 1;
  int32 total_faculty = 2;
  int32 total_courses = 3;
  int32 open_courses = 4;
  int32 total_enrollments = 5;
  bool enrollment_open = 6;
  string current_semester = 7;
}

// Request/Response messages - Course Management
message CreateCourseRequest {
  string code = 1;
  string title = 2;
  string description = 3;
  int32 units = 4;
  string schedule = 5;
  string room = 6;
  int32 capacity = 7;
  string faculty_id = 8;
  string semester = 9;
}

message CreateCourseResponse {
  bool success = 1;
  string course_id = 2;
  Course course = 3;
  string message = 4;
}

message UpdateCourseRequest {
  string course_id = 1;
  string title = 2;
  string description = 3;
  int32 units = 4;
  string schedule = 5;
  string room = 6;
  int32 capacity = 7;
  string faculty_id = 8;
  bool is_open = 9;
}

message UpdateCourseResponse {
  bool success = 1;
  Course course = 2;
  string message = 3;
}

message DeleteCourseRequest {
  string course_id = 1;
}

message DeleteCourseResponse {
  bool success = 1;
  string message = 2;
}

message AssignFacultyRequest {
  string course_id = 1;
  string faculty_id = 2;
}

message AssignFacultyResponse {
  bool success = 1;
  string message = 2;
}

// Request/Response messages - User Management
message CreateUserRequest {
  string email = 1;
  string role = 2; // student, faculty, admin
  string name = 3;
  string student_id = 4; // if role=student
  string faculty_id = 5; // if role=faculty
  string department = 6; // if role=faculty
  string major = 7; // if role=student
  int32 year_level = 8; // if role=student
}

message CreateUserResponse {
  bool success = 1;
  string user_id = 2;
  string initial_password = 3; // displayed once
  User user = 4;
  string message = 5;
}

message ListUsersRequest {
  string role = 1; // optional filter
  bool active_only = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
}

message ResetPasswordRequest {
  string user_id = 1;
}

message ResetPasswordResponse {
  bool success = 1;
  string new_password = 2; // displayed once
  string message = 3;
}

message ToggleUserStatusRequest {
  string user_id = 1;
  bool activate = 2; // true=activate, false=deactivate
}

message ToggleUserStatusResponse {
  bool success = 1;
  string message = 2;
}

// Request/Response messages - System Configuration
message SetEnrollmentPeriodRequest {
  string start_date = 1; // ISO 8601 format
  string end_date = 2; // ISO 8601 format
}

message SetEnrollmentPeriodResponse {
  bool success = 1;
  string message = 2;
}

message ToggleEnrollmentRequest {
  bool enable = 1;
}

message ToggleEnrollmentResponse {
  bool success = 1;
  bool enrollment_open = 2;
  string message = 3;
}

message GetSystemConfigRequest {
  string key = 1; // optional, if empty returns all
}

message GetSystemConfigResponse {
  repeated SystemConfig configs = 1;
}

message UpdateSystemConfigRequest {
  string key = 1;
  string value = 2;
  string admin_id = 3;
}

message UpdateSystemConfigResponse {
  bool success = 1;
  string message = 2;
}

// Request/Response messages - Overrides
message OverrideEnrollmentRequest {
  string student_id = 1;
  string course_id = 2;
  string action = 3; // "force_enroll" or "force_drop"
  string reason = 4;
  string admin_id = 5;
}

message OverrideEnrollmentResponse {
  bool success = 1;
  string message = 2;
}

// Request/Response messages - Statistics
message GetSystemStatsRequest {
  // empty for now
}

message GetSystemStatsResponse {
  SystemStats stats = 1;
}